refactor(core):重构数据查询和懒加载代理逻辑
- 移除了 TypedDSLQueryBuilder 类及相关方法，简化 DSL 查询构建器- 修改 find 方法返回类型为 List<Map<String, Object>>，统一查询结果格式
- 调整懒加载代理创建逻辑，将 SessionContext 替换为 Session
- 优化查询执行流程，分离数据转换和代理创建步骤
- 更新测试代码以适配新的查询接口和返回类型- 修复查询结果为空时的处理逻辑，使用 getFirst() 替代 get(0)